--- a/CatalanoBackend/requirements.txt
+++ b/CatalanoBackend/requirements.txt
@@ -3,8 +3,9 @@ distlib==0.3.8
 Django==5.1.3
 django-cors-headers==4.4.0
 django-filter==24.3
+djangorestframework==3.15.2
 filelock==3.16.1
-mysqlclient==2.2.4
+pillow==11.0.0
 platformdirs==4.3.6
 sqlparse==0.4.3
 tzdata==2022.6
