--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 __pycache__/
 .vscode/
+.vscode_bak/
 staticfiles/
 CatalanoBackend/local_settings.py
+CatalanoBackend/local_settings_bak.py
 db.sqlite3
